--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.select {
+  gap: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.textarea {
+  gap: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding-top: 2rem;
+}
+
+
+.translator-body {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  padding: .5rem;
+  background-color: rgb(113, 113, 242);
+  color: #FFF;
+  font-weight: 600;
+  border-radius: 5px;
+  border: none;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: ease-in-out;
+  transform: translate(0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.select select{
+  margin: 0px 1rem;
+  padding: .3rem;
+}
+
+textarea {
+  padding: 1rem;
+}
+
+.select select option {
+    font-size: 15px;
 }
